# 3DFos

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
doc/: install_cloudcompare.md
src/ptv3_3dfos/: __init__.py  inference.py  liteptv1m1_model.py  model.py  module.py  oacnn_model.py  oacnns_model.py  ptv3_model.py  ptv3v1m1_model.py  seghead.py  structure.py  transform.py
src/three_d_fos/: __init__.py  __version__.py  inference.py  module.py  ptv3v1m1_model.py  seghead.py  structure.py  transform.py
src/three_d_fos/backend/: __init__.py  inference.py  liteptv1m1_model.py  module.py  ptv3v1m1_model.py  registry.py  seghead.py  structure.py  tiling.py  transform.py  utils.py
src/three_d_fos/backend/model/: __init__.py  liteptv1m1_model.py  ptv3v1m1_model.py
src/three_d_fos/backend/serialization/: __init__.py  default.py  hilbert.py  z_order.py
src/three_d_fos/cli/: __init__.py  io.py  logging.py  main.py
src/three_d_fos/cloudcompare/: __init__.py  plugin.py
src/three_d_fos/core/: __init__.py  feature.py  inference.py  model.py
src/three_d_fos/gui/: __init__.py  app.py
src/three_d_fos/io/: __init__.py  io.py
