[build-system]
requires = ["uv_build>=0.7.12,<0.8.0"]
build-backend = "uv_build"

[project]
name = "PTV3-3DFos"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13.0,<3.14.0"
readme = "README.md"

dependencies = [
    "addict>=2.4.0",
    "dendroptimized>=0.2.2",
    "laspy>=2.5.4",
    "lazrs>=0.7.0",
    "pgeof>=0.3.2",
    "plyfile>=1.1.2",
]

[project.optional-dependencies]
flash-attn = ["flash-attn==2.8.3"]
cpu = [
    "timm>=1.0.15",
    "torch~=2.10.0",
    "torch-geometric>=2.6.1",
    "torch-cluster==1.6.3+pt210cpu",
    "torchvision~=0.25.0",
    "spconv>=2.3.8",
]
cu130 = [
    "timm>=1.0.15",
    "torch~=2.10.0",
    "torch-geometric>=2.6.1",
    "torch-cluster==1.6.3+pt210cu130",
    "torchvision~=0.25.0",
    #"spconv-cu126>=2.3.8",
]

[tool.uv]
no-build-isolation-package = ["flash-attn"]
conflicts = [[{ extra = "cpu" }, { extra = "cu130" }]]
concurrent-installs=8
find-links = [
    "https://data.pyg.org/whl/torch-2.10.0+cpu.html",
    "https://data.pyg.org/whl/torch-2.10.0+cu130.html",
]

[[tool.uv.dependency-metadata]]
requires-dist = ["torch", "setuptools", "einops"]
name = "flash-attn"
version = "2.8.3"

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu130", extra = "cu130", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]
torchvision = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu130", extra = "cu130", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[project.scripts]
3DFos = "ptv3_3dfos.inference:main" # inference tailored for 3DFin
