[build-system]
requires = ["uv_build>=0.11.17,<0.12"]
build-backend = "uv_build"

[project]
name = "3DFos"
version = "0.1.0"
description = "Forestry standalone inference "
requires-python = ">=3.12.0,<3.14.0"
readme = "README.md"

dependencies = [
    "packaging",
    "addict>=2.4.0",
    "dendroptimized>=0.2.2",
    "laspy>=2.5.4",
    "lazrs>=0.7.0",
    "pgeof>=0.3.2",
    "plyfile>=1.1.2",
]

[dependency-groups]
dev = [
    "ruff",
]

[project.optional-dependencies]
flash-attn = ["flash-attn==2.8.3"]
nanotsparsecuda = ["nanotsparse>=2.2.0"]
cpu = [
    "torch~=2.12.0",
    "torch-geometric>=2.6.1",
    "torchvision~=0.27.0",
    "nanotsparse>=2.2.0"
]
cu130 = [
    "torch~=2.12.0",
    "torch-geometric>=2.6.1",
    "torchvision~=0.27.0",
]
cu128 = [
    "torch~=2.11.0",
    "torch-geometric>=2.6.1",
    "torchvision~=0.26.0",
]

[tool.uv.build-backend]
module-name = "three_d_fos"

[tool.uv]
no-build-isolation-package = ["flash-attn", "nanotsparse"]
conflicts = [[{ extra = "cpu" }, { extra = "cu130" }, { extra = "cu128" }], [{extra ="cpu"}, {extra="nanotsparsecuda"}]]
dependency-metadata = [
    { name = "flash-attn", version = "2.8.3", requires-dist = ["torch", "setuptools", "einops"] },
    { name = "nanotsparse", version = "2.2.0", requires-dist = ["torch", "setuptools", "ninja"] },
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu130", extra = "cu130", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
    { index = "pytorch-cu128", extra = "cu128", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]
torchvision = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu130", extra = "cu130", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
    { index = "pytorch-cu128", extra = "cu128", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]
nanotsparse = { git = "https://github.com/3DFin/nanoTSparse.git", extra = "nanotsparsecuda" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501", "N806", "N803", "N812", "E402"]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[project.scripts]
3DFos = "three_d_fos.cli.main:main"
